--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,8 @@
-aiohttp>=0.21
+aiohttp==3.1.2
+async-timeout==2.0.1
+attrs==17.4.0
+chardet==3.0.4
+idna==2.6
+idna-ssl==1.0.1
+multidict==4.1.0
+yarl==1.1.1
